--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.16.3",
     "path": "^0.12.7",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "express-basic-auth": "^1.1.4"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.32.3",
